# Black-Shades-Enhanced

./: .gitignore  README.md
blackshades/: CMakeLists.txt  IF_THIS_IS_A_README_YOU_HAVE_WON  OLD_uDevGame_License.txt  blackshades.dsp  blackshades.dsw  blackshades.ncb  blackshades.opt  blackshades.plg  blackshades.sln  blackshades.vcxproj  blackshades.vcxproj.filters  blackshades_revenge.vcxproj  blackshades_revenge.vcxproj.filters  icon.tga  notes.txt  resource.h  stderr.txt
blackshades/Source/: AGL_DSp.h  CMakeLists.txt  Camera.h  Constants.h  Decals.cpp  Decals.h  Files.cpp  Files.h  Fog.h  Frustum.cpp  Game.h  GameDraw.cpp  GameInitDispose.cpp  GameLoop.cpp  GameTick.cpp  MacInput.h  Main.cpp  Models.cpp  Person.cpp  Person.h  PhysicsMath.h  Quaternions.cpp  Serialize.h  Skeleton.cpp  Skeleton.h  SoundFX.cpp  SoundFX.h  Sprites.cpp  Sprites.h  Support.cpp  Support.h  TGALoader.cpp  TGALoader.h  Timer.h  macdefines.h  stdafx.cpp
blackshades/res/: Thumbs.db
blackshades_revenge/: CMakeLists.txt  Makefile  Readme.html  blackshades.dsp  blackshades.plg  blackshades.rc  blackshades_revenge.ncb  blackshades_revenge.opt  stderr.txt
blackshades_revenge/Source/: Alerts.h  CMakeLists.txt  Camera.h  Fog.cpp  Fog.h  Game.h  GameDraw.cpp  GameInitDispose.cpp  GameLoop.cpp  GameTick.cpp  MacInput.cpp  Main.cpp  Maths.h  Models.cpp  Models.h  Quaternions.h  Serialize.cpp  Skeleton.cpp  Skeleton.h  SoundFX.h  Sprites.cpp  Sprites.h  Support.cpp  Support.h  Text.cpp  Text.h  Timer.cpp
